feat: enhance README and package.json for DuckDuckGo search integration
- Updated package.json to include new search-related features: web-search, serpapi, knowledge-graph, news-search, video-search, image-search, safe-search, region-specific, and date-filter.
- Expanded README.md to provide comprehensive documentation on the Model Context Protocol (MCP) server, detailing features, configuration, API parameters, and development setup for integrating DuckDuckGo search capabilities with LLMs.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mcp-duckduckgo-search",
-	"version": "0.0.5",
+	"version": "0.0.0",
 	"description": "MCP server for DuckDuckGo search",
 	"type": "module",
 	"main": "dist/index.js",
@@ -26,13 +26,17 @@
 		"model-context-protocol",
 		"duckduckgo",
 		"search",
-		"web-content",
+		"web-search",
+		"serpapi",
+		"knowledge-graph",
+		"news-search",
+		"video-search",
+		"image-search",
+		"safe-search",
+		"region-specific",
+		"date-filter",
 		"llm",
-		"ai",
-		"chat-completion",
-		"prompt-templates",
-		"json-output",
-		"markdown-output"
+		"ai"
 	],
 	"author": "Scott Spence",
 	"license": "MIT",
